[tool.poetry]
name = "goapy"
version = "0.2.1"
description = "Goal Oriented Action Planning alghorithm implementation in Python"
authors = ["Leonardo Pepe de Freitas <lpepefreitas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
networkx = "2.3"
Automat = "0.8.0"
rx = "1.6.0"
conversion = "^0.0.7"

[tool.poetry.dev-dependencies]
docutils = "0.13.1"
networkx = "2.3"
rx = "1.6.0"
conversion = "0.0.7"
Sphinx = "1.5.2"
pytest = "5.3.5"
pylint = "2.5.2"
autopep8 = "1.5.2"
rope = "^0.17.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
