[tool.poetry]
authors = ["Leonardo Pepe de Freitas <lpepefreitas@gmail.com>"]
description = "Goal Oriented Action Planning alghorithm implementation in Python"
name = "goapy"
version = "0.2.1"

[tool.poetry.dependencies]
Automat = "0.8.0"
networkx = "2.3"
python = "^3.8.5"
rx = "1.6.0"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
Sphinx = "1.5.2"
autopep8 = "1.5.2"
conversion = "0.0.7"
docutils = "0.13.1"
flake8 = "^3.7.9"
networkx = "2.3"
pylint = "2.5.2"
pytest = "5.3.5"
rope = "^0.17.0"
rx = "1.6.0"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
